# isogame

./: pyproject.toml
src/: TODO.md  main.py
src/demo_game/logic/: game.py
src/demo_game/visual/: assets.py
src/engine/: cqrs.py  entity.py  game.py  system.py  terrain.py  trait.py
src/engine/builtins/: traits.py
src/engine/builtins/events/: entity_arrived.py
src/engine/builtins/systems/: ground_snapping.py  interaction.py  movement.py
src/engine/core/: commons.py  cqrs.py  entity.py  game.py  system.py  terrain.py  trait.py
src/engine/models/: entity.py  terrain.py  trait.py
src/engine/services/: events.py  system.py
src/game/: entities.py
src/game/systems/: base.py  movement.py  wandering.py
src/game/terrain/: mapping.py
src/game/traits/: traits.py
src/game/world/: world.py
src/game/world/entities/: base.py  mapping.py  traits.py  tree.py  units.py
src/game/world/terrain/: mapping.py  tile.py
src/graphics/: asset.py  assets.py  mapper.py  renderer.py  scene.py
src/graphics/meshers/: entity_mesher.py  mesh.py  terrain_mesher.py
tests/engine/: test_cqrs.py  test_entity.py
tests/engine/systems/: test_interaction.py  test_movement.py
tests/game/systems/: test_movement.py  test_wandering.py
tests/game/world/: test_world.py
tests/integration_tests/: test_game.py
tests/unit/engine/builtins/: test_me.py
tests/unit/engine/core/: test_cqrs.py  test_entity.py  test_game.py  test_terrain.py
tests/unit_tests/engine/: test_cqrs.py  test_entity.py  test_terrain.py
tests/unit_tests/graphics/: test_graphics.py
(+2 files in other folders)
