[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isogame"
version = "0.1.0"
description = "My Factorio-style Isometric Game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ursina",
    "pydantic",
    # Add other runtime libs here if needed
]

# This tells Python: "My packages are inside the 'src' folder"
[tool.setuptools.packages.find]
where = ["src"]

# This tells Pytest: "Add 'src' to the path automatically"
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]